--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
     --border-radius: 0.3rem;
 }
 
+.corner-logo {
+    position: absolute;
+    top: 0px;
+    left: 40px;
+    width: 200px;
+    height: auto;
+}
+
 .page-frame {
     position: relative;
     width: 100vw;
