--- a/src/App.css
+++ b/src/App.css
@@ -1,82 +1,79 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lora', serif;
     /* border: 1px solid red; */
 }
 
 :root {
     --primary: rgb(249, 240, 219);
-    --secondary: #ad628b;
-    --tertiary: #2b9c25;
+    --secondary: #737373;
+    --tertiary: #ebee30;
     --error: rgb(228, 46, 1);
-    --border-radius: 0.3rem;
 }
 
-h1 {
-    font-style: italic;
-    font-family: Georgia, Times, 'Times New Roman', serif;
-}
-
-.page-container {
+.page-contain {
+    position: relative;
+    left: 0;
+    top: 0;
     display: flex;
     flex-direction: column;
 }
 
-.page-content {
-    margin: 15px;
-}
-
-
-
-/* HEADER AND NAV */
-
-.header-contain {
-    display: flex;
-    flex-direction: row;
-    width: 40%;
-    height: 120px;
-}
-.corner-logo {
-    position: relative;
-    top: 0px;
-    left: 0px;
-    margin: 10px;
-    width: 20%;
-    height: auto;
-}
-.header {
-    top: 0px;
-    width: 80%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-    align-items: center;
-    background-image: linear-gradient(to right, whitesmoke, var(--primary));
-    border-bottom: 2px solid whitesmoke;
-    font-family: Georgia, Times, 'Times New Roman', serif;
-}
-
+/* NAV */
 .nav {
+    min-height: 40px;
+    position: absolute;
+    background-color: #0000;
+
     display: flex;
     flex-direction: row;
+
+    align-items: center;
+
     list-style-type: none;
+
+
 }
+
+.nav p {
+    font-family: 'Lora', serif;
+    font-size: 24px;
+    color: var(--primary);
+    margin-right: 100px;
+}
+
 .nav a {
-    padding-left: 15px;
-    padding-right: 15px;
+    font-family: 'Lora', serif;
+    padding-left: 30px;
+    padding-right: 30px;
     font-size: 18px;
     color: var(--tertiary);
+    text-decoration: none;
+    align-self: end;
+    justify-self: end;
+    align-items: end;
+    justify-items: end;
 }
-.nav a.active, .nav a:hover {
+
+.nav a.active,
+.nav a:hover {
     font-style: italic;
-    color: var(--secondary);
+    color: var(--primary);
 }
 
 /* HOME PAGE */
-.carousel-contain {
-    width: 60%;
-    height: auto;
-    margin-left: 0;
+.top-left-home {
     margin-top: 0;
+    margin-left: 0;
+    width:60%;
+    height:auto;
+}
+.top-left-home img {
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-contain {
+    width: 500px;
     background-color: whitesmoke;
 }
 
@@ -97,21 +94,6 @@ h1 {
     list-style-type: none;
 }
 
-
-@media screen and (max-width: 1100px) {
-    .mhl-corner-logo {
-        opacity: 0;
-    }
-}
-
 @media screen and (max-width: 768px) {
-    .header a {
-        border-bottom: var(--secondary) 2px solid;
-    }
-    .nav a {
-        width: 100vw;
-        flex-direction: column;
-        margin: 0px;
-        border-bottom: none;
-    }
+
 }
