--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
     left: 0;
     top: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 /* NAV */
@@ -61,21 +61,26 @@
 }
 
 /* HOME PAGE */
-.top-left-home {
+.home-contain {
+    display: flex;
+    flex-direction: row;
+}
+.home-top-left {
     margin-top: 0;
     margin-left: 0;
-    width:60%;
-    height:auto;
+    width: 65%;
+    height: auto;
 }
-.top-left-home img {
+.home-top-left img {
     width: 100%;
     height: 100%;
 }
-
-.carousel-contain {
-    width: 500px;
-    background-color: whitesmoke;
+.home-top-right {
+    width: 35%;
+    height: auto;
+    background-color: var(--primary);
 }
+
 
 
 /* FOOTER */
