--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@
     height: auto;
     padding: 40px;
     background-color: var(--secondary);
-    padding-top: 12%;
+    padding-top: 8%;
 }
 
 
@@ -137,11 +137,11 @@
 }
 
 
-/* ABOUT */
+/* GALLERY */
 .carousel-contain {
     margin-top: 120px;
-    margin-left: 30%;
-    margin-right: 35%;
+    margin-left: 30vw;
+    margin-right: 30vw;
 }
 
 .carousel {
@@ -158,6 +158,7 @@
 
 .menu-bg {
     width:100vw;
+    background-color: var(--secondary);
 }
 .menu-bg img {
     width: 100%;
@@ -167,8 +168,8 @@
 .accordion {
     position: absolute;
     margin-top: 120px;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 5%;
+    margin-right: 5%;
     background-color: #0005;
     border-radius: 15px;
 }
@@ -182,11 +183,13 @@
     display: flex;
     flex-flow: row wrap;
     font-family: 'Lora', serif;
-    font-size: 20px;
-    color: var(--primary);
+    font-size: 24px;
+    font-weight: bold;
+    color: var(--secondary);
     margin-right: 75px;
     padding-left: 5px;
     padding-right: 5px;
+    margin-bottom: 15px;
 
 }
 
@@ -196,23 +199,38 @@
 
 .accordion-item {
     border: var(--tertiary) 2px solid;
-    background-color: antiquewhite;
+    height: fit-content;
+    background-color: var(--primary);
     width: 275px;
     margin: 15px;
     padding: 5px;
 }
 
-.menu-insert {
-    background-color: aquamarine;
+.head-and-price {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-content: baseline;
 }
-
-.menu-insert-head {
-    font-size: 18pt;
-    text-decoration: wavy;
+.menu-insert {
+    background-color: var(--secondary);
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    padding: 8px;
+    border-radius: 5px;
+}
+.menu-insert-head, .menu-insert-price {
+    font-size: 18px;
+    margin-top: 0px;
+    padding-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
 .menu-insert-description {
     font-style: italic;
+    margin-left: 10%;
 }
 
 
