--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 .page-contain {
     background-color: var(--secondary);
     position: relative;
+    width: 100%;
     left: 0;
     top: 0;
     display: flex;
@@ -23,16 +24,14 @@
     height: 80px;
     position: absolute;
     background-color: #2b2b2bb5;
-    width: 100vw;
-
+    width: calc(100% - 40px);
+    margin: 0px;
     display: flex;
     flex-direction: row;
 
     align-items: center;
 
     list-style-type: none;
-
-
 }
 
 .nav p {
@@ -40,7 +39,7 @@
     font-size: 32px;
     color: var(--primary);
     margin-right: 75px;
-    background-color: antiquewhite;
+    background-color: var(--secondary);
     padding-left: 5px;
     padding-right: 5px;
     border: var(--tertiary) 2px solid;
@@ -61,6 +60,7 @@
     font-style: italic;
     text-decoration: underline;
 }
+
 /* .nav a:hover {
     color: var(--primary);
     background-color: antiquewhite;
@@ -70,25 +70,28 @@
 .home-contain {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .home-top-contain {
     display: flex;
     flex-direction: row;
 }
+
 .home-top-left {
     margin-top: 0;
     margin-left: 0;
     width: 72%;
     height: auto;
 }
+
 .home-top-left img {
     width: 100%;
     height: 100%;
 }
 
 .home-top-right {
-    width: 38%;
+    width: 28%;
     height: auto;
     padding: 40px;
     background-color: var(--secondary);
@@ -100,12 +103,14 @@
     display: flex;
     flex-direction: row;
 }
+
 .home-btm-left {
     margin-top: 0;
     margin-left: 0;
     width: 37%;
     height: auto;
 }
+
 .home-btm-left img {
     width: 100%;
     height: 100%;
@@ -124,16 +129,18 @@
     width: 37%;
     height: auto;
 }
+
 .home-btm-right img {
     width: 100%;
     height: 100%;
 }
 
-.home-top-right, .home-btm-middle {
+.home-top-right,
+.home-btm-middle {
     text-align: center;
     color: var(--primary);
 
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 
@@ -157,9 +164,10 @@
 }
 
 .menu-bg {
-    width:100vw;
+    width: 100%;
     background-color: var(--secondary);
 }
+
 .menu-bg img {
     width: 100%;
     height: 100%;
@@ -212,6 +220,7 @@
     justify-content: space-between;
     align-content: baseline;
 }
+
 .menu-insert {
     background-color: var(--secondary);
     margin-left: 10px;
@@ -220,7 +229,9 @@
     padding: 8px;
     border-radius: 5px;
 }
-.menu-insert-head, .menu-insert-price {
+
+.menu-insert-head,
+.menu-insert-price {
     font-size: 18px;
     margin-top: 0px;
     padding-top: 0px;
@@ -243,7 +254,7 @@
     /* bottom: 0px;
     height: 40px; */
     width: 100%;
-    margin: 0;
+    margin: 0px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -252,5 +263,45 @@
 }
 
 @media screen and (max-width: 768px) {
+    .nav {
+        flex-direction: column;
+    }
 
+    .nav p {
+        background-color: var(--secondary);
+        border: var(--tertiary) 2px solid;
+    }
+
+    .nav a {
+        font-size: 22px;
+
+    }
+
+    .home-top-contain {
+        flex-direction: column;
+    }
+
+    .home-btm-contain {
+        flex-direction: column;
+    }
+
+    .home-top-left {
+        width: 100%;
+    }
+
+    .home-top-right {
+        width: 100%;
+    }
+
+    .home-btm-left {
+        width: 100%;
+    }
+
+    .home-btm-middle {
+        width: 100%;
+    }
+
+    .home-btm-right {
+        width: 100%;
+    }
 }
