--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,8 @@
     width: 72%;
     height: auto;
     background-image: url(./assets/pictures/nav-bg-1.png);
+    background-repeat: no-repeat;
+    background-color: var(--secondary);
 }
 
 .home-top-left img {
@@ -93,7 +95,7 @@
     height: auto;
     padding: 40px;
     background-color: var(--secondary);
-    padding-top: 8%;
+    padding-top: 7%;
 }
 
 
@@ -191,6 +193,7 @@
     margin-top: 120px;
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
     align-content: space-around;
     width: 100%;
     
@@ -299,7 +302,9 @@
     ul.nav {
         justify-content: space-evenly;
     }
-
+    .home-contain {
+        margin-top: 200px;
+    }
     .home-top-contain {
         flex-direction: column;
     }
