--- a/src/App.css
+++ b/src/App.css
@@ -281,7 +281,7 @@
 @media screen and (max-width: 940px) {
     .nav {
         flex-direction: column;
-        height: 200px;
+        height: 220px;
         align-content: center;
     }
     
@@ -291,6 +291,7 @@
         margin-bottom: 15px;
         margin-left: 0px;
         margin-right: 40px;
+        text-align: center;
     }
     
     .nav a {
